update: databse schema

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="pause_restart">RESTART</string>
     <string name="flags">flags</string>
     <string name="rays">rays</string>
+    <string name="cancel">Cancel</string>
 </resources>
