add: daily reward section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,8 @@
     <string name="share_note">Play with Friends\nSolve the same Sudoku puzzle together</string>
     <string name="keep_your_mind_sharp">Keep Your Mind Sharp</string>
     <string name="share">Share</string>
+    <string name="share_message">Can you solve this? Check out your skill here\nhttps://github.com/Sou-gata/sudoku_android_game/releases/download/V_1.0.7/Sudoku_V_1.0.7.apk\nChallenge your brain now</string>
+    <string name="awards">Awards</string>
     <string-array name="pause_popup_titles">
         <item>@string/hint</item>
         <item>@string/erase</item>
